--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
       <input type="submit" name="submit" value="Sign Out">
     </fieldset>
   </form>
+  <form class="form-inline">
+    <div class="form-group">
+      <label for="newSound" class="sr-only">New Sounds</label>
+      <input type="text" readonly class="form-control-plaintext" id="newSound" value="Add to your collection...">
+    </div>
+    <div class="form-group mx-sm-3">
+      <label for="newSearch" class="sr-only">Search</label>
+      <input type="text" class="form-control" id="newSearch" placeholder="Search">
+    </div>
+    <button type="submit" class="btn btn-primary">Get Me Sounds</button>
+  </form>
   <!-- END OF AUTH FUNCTIONS -->
   <!-- Footer Wrap -->
   <div id="footerwrap">
