Bugfix in Modals

--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
   <!-- AUTH FUNCTIONS BUTTONS-->
   <button type="button" class="btn btn-primary sign-up" id="sign-up-button" data-toggle="modal" data-target="#signup">
   Sign Up
-</button>
+  </button>
   <button type="button" class="btn btn-primary sign-in" id="sign-in-button" data-toggle="modal" data-target="#signin">
   Sign In
-</button>
+  </button>
   <button type="button" class="btn btn-primary change-password" id="change-password-button" data-toggle="modal" data-target="#changepassword">
   Change Password
-</button>
-  <!-- sign out-->
+  </button>
   <form id="sign-out">
     <fieldset>
       <h3>Sign Out</h3>
@@ -125,10 +124,10 @@
             </fieldset>
           </form>
         </div>
-        <!-- <div class="modal-footer">
+        <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
   <div class="modal fade" id="signin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
