Contents-Tracks Formatting
- added class hidden to contents

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <!-- Contents -->
 <div class='container'>
   <div class='row'>
+  <div class='contents hidden'>
   <div class='titles'>
     <div class="col-lg-3 col-md-6 text-center">
     <div id='currentPlaylist'>
@@ -57,10 +58,11 @@
   </div>
   <div class='currentPlaylist'>
   </div>
-  <div class='playlists'>
+  <div class='playlist-list'>
   </div>
-  <div class='tracks'>
+  <div class='track-list'>
   </div>
+</div>
 </div>
 </div>
   <!-- Footer Wrap -->
