Css & Index.html
Style changes and further confirming tasks appears in page

--- a/index.html
+++ b/index.html
@@ -41,29 +41,37 @@
   <!-- Contents -->
 <div class='container'>
   <div class='row'>
-  <div class='contents hidden'>
-  <div class='titles'>
-    <div class="col-lg-3 col-md-6 text-center">
-    <div id='currentPlaylist'>
-      <h2>Current Playlist</h2></div>
+    <div class='contents hidden'>
+      <div class="col-lg-3 col-md-6 text-center">
+        <div class='current-playlist-container'>
+          <div class='current-playlist-title'>
+          <h2>Current Playlist</h2>
+          </div>
+          <div class='current-playlist'>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 text-center">
+        <div class='playlists-container'>
+          <div class='playlists-title'>
+            <h2>Playlists</h2>
+          </div>
+          <div class='playlists-list'>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="col-lg-3 col-md-6 text-center">
+        <div class='tracks-container'>
+          <div class='tracks-title'>
+          <h2>Tracks</h2>
+          </div>
+          <div class='tracks-list'>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-lg-3 col-md-6 text-center">
-    <div id='playlists'>
-      <h2>Playlists</h2></div>
-    </div>
-    <div class="col-lg-3 col-md-6 text-center">
-    <div id='tracks'>
-      <h2>Tracks</h2></div>
-    </div>
   </div>
-  <div class='currentPlaylist'>
-  </div>
-  <div class='playlist-list'>
-  </div>
-  <div class='track-list'>
-  </div>
-</div>
-</div>
 </div>
   <!-- Footer Wrap -->
   <div id="footerwrap">
