Add Track in Progress

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <!-- New Sound Form -->
 
-      <button type="button" class="hidden btn btn-primary new-sound" id="new-sound-button" data-toggle="modal" data-target="#new-sound">
+      <button type="button" class="hidden btn btn-primary new-sound" id="new-sound-button" data-toggle="modal" data-target="#newsound">
       Add Sound
       </button>
       <!-- Say goodnight Gracie -->
@@ -91,7 +91,7 @@
     </div>
   </div>
   <!-- New Sound Modal -->
-<div class="modal fade" id="new-sound" tabindex="-1" role="dialog" aria-labelledby="newTrackLabel" aria-hidden="true">
+<div class="modal fade" id="newsound" tabindex="-1" role="dialog" aria-labelledby="newTrackLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -106,7 +106,7 @@
              <input type="text" name="track[title]" value="" placeholder="Title">
              <input type="text" name="track[artist]" value="" placeholder="Artist">
              <input type="text" name="track[host_url]" value="" placeholder="https://...">
-             <input type="submit" class="btn btn-primary pull-right" name="submit" value="Add Track">
+             <input type="submit" class="btn btn-primary new-sound" name="submit" value="Add Sound">
            </fieldset>
          </form>
        </div>
