Add New Sound Action Complete
- added event handlers to index.js
- connected index.html to events.js action

Still need to:
make tracks clear and re-load upon action
indicate successful addition with a message to user

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
              <input type="text" name="track[title]" value="" placeholder="Title">
              <input type="text" name="track[artist]" value="" placeholder="Artist">
              <input type="text" name="track[host_url]" value="" placeholder="https://...">
-             <input type="submit" class="btn btn-primary new-sound" name="submit" value="Add Sound">
+             <input type="submit" name="submit" value="Add Sound">
            </fieldset>
          </form>
        </div>
@@ -136,9 +136,9 @@
             </fieldset>
           </form>
         </div>
-        <div class="modal-footer">
+        <!-- <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
