--- a/index.html
+++ b/index.html
@@ -84,13 +84,17 @@
       <button type="button" class="hidden btn btn-primary new-sound" id="new-sound-button" data-toggle="modal" data-target="#newsound">
       Add Sound
       </button>
+      <button type="button" class="hidden btn btn-primary new-playlist" id="new-playlist-button" data-toggle="modal" data-target="#newplaylist">
+      New Playlist
+      </button>
       <!-- Say goodnight Gracie -->
       <div class="col-lg-12">
         <b>Created by Madelaine Ripley</b>
       </div>
     </div>
   </div>
-  <!-- New Sound Modal -->
+  <!-- New Contents Modal -->
+  <!--  New Sound Modal -->
 <div class="modal fade" id="newsound" tabindex="-1" role="dialog" aria-labelledby="newTrackLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -115,6 +119,30 @@
        </div> -->
      </div>
   </div>
+</div>
+<!--  New Playlist Modal -->
+<div class="modal fade" id="newplaylist" tabindex="-1" role="dialog" aria-labelledby="newTrackLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="newPlaylistLabel">Title</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+      </button>
+     </div>
+     <div class="modal-body">
+       <form id="new-playlist">
+         <fieldset>
+           <input type="text" name="playlist[name]" value="" placeholder="Name">
+           <input type="submit" name="submit" value="Create Playlist">
+         </fieldset>
+       </form>
+     </div>
+     <!-- <div class="modal-footer">
+       <button type="submit" class="btn btn-primary pull-right" data-dismiss="modal" name="submit" value="Save">Save</button>
+     </div> -->
+   </div>
+</div>
 </div>
   <!-- Auth Function Modals -->
   <div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
