Style in Progress
- separating css styling into scss file structure
- index.html modifications for spacing

--- a/index.html
+++ b/index.html
@@ -14,12 +14,27 @@
 </head>
 
 <body class="container-fluid">
-  <h1><b>🎧 Phonophonia🎧 </b></h1>
-  <div id="blurb">
-    <h2><b>A Resoundingly Sound Collection of Sounds<b></h2><br>
-    <p>"Phono" n. Sound. Vibrations that travel through the air or another medium and can be heard when they reach a person's or animal's ear.<br> "Phonia" adj. denoting a type of plug, and the corresponding socket, used with audio and video equipment.<br></p>
+  <div class="row header">
+    <div class="large-spacer col-lg-3 col-xs-2"></div>
+    <h1 class="title"><b>🎧 Phonophonia🎧 </b></h1>
+    <div class="large-spacer col-lg-3 col-xs-2"></div>
   </div>
-  <div class="message" id='message'></div>
+    <br>
+    <div class="row blurb">
+    <div class="medium-spacer col-xs-2"></div>
+      <h2><b>A Resoundingly Sound Collection of Sounds</b></h2>
+    </div>
+  <br>
+    <div class="row">
+    <div class="smallest-spacer col-xs-2"></div>
+      <p>"Phono" n. Sound. Vibrations that travel through the air or another medium and can be heard when they reach a person's or animal's ear.</p>
+      <div class="smallest-spacer col-xs-2"></div>
+      <br>
+      <div class="small-spacer col-xs-2"></div>
+      <p>"Phonia" adj. denoting a type of plug, and the corresponding socket, used with audio and video equipment.</p>
+      <div class="small-spacer col-xs-2"></div>
+  </div>
+<div class="message" id='message'></div>
   <!-- AUTH FUNCTIONS BUTTONS-->
   <button type="button" class="btn btn-primary sign-up" id="sign-up-button" data-toggle="modal" data-target="#signup">
   Sign Up
@@ -43,6 +58,7 @@
   <!-- Contents -->
 <div class='container'>
   <div class='row'>
+    <div class="spacer col-lg-3 col-md-6"></div>
     <div class='contents hidden'>
       <div class="col-lg-3 col-md-6 text-center">
         <div class='current-playlist-container'>
