Background image & styling changes
Continued formatting challenges, closer to the end goal

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 <br>
   <!-- Contents -->
 <!-- <div class='container'> -->
+<!-- <div class="medium-spacer col-xs-2"></div> -->
   <div class='row'>
     <!-- <div class="largest-spacer col-xs-2"></div> -->
     <div class='contents hidden'>
       <div class='current-playlist-container'>
-      <div class="col-lg-3 col-md-6 text-center">
           <div class='current-playlist-title'>
           <h2>Current Playlist</h2>
           </div>
@@ -83,28 +83,24 @@
           </div>
         </div>
       </div>
-      <!-- <div class="col-lg-3 col-md-6 text-center">
-        <div class='playlists-container'>
-          <div class='playlists-title'>
-            <h2>Playlists</h2>
-          </div>
-          <div class='playlists-list'>
-          </div>
-        </div>
-      </div>
-      <br>
-      <div class="col-lg-3 col-md-6 text-center">
-        <div class='tracks-container'>
+      <!-- <br> -->
+        <div class='tracks-container hidden'>
           <div class='tracks-title'>
           <h2>Tracks</h2>
           </div>
           <div class='tracks-list'>
           </div>
         </div>
-      </div> -->
-    </div>
+        <div class='playlists-container hidden'>
+          <div class='playlists-title'>
+            <h2>Playlists</h2>
+          </div>
+          <div class='playlists-list'>
+          </div>
+        </div>
+        <!-- <div class="medium-spacer col-xs-2" id="right-div"></div> -->
+      </div>
     <!-- <div class="largest-spacer col-xs-2"></div> -->
-  </div>
 <!-- </div> -->
   <!-- Footer Wrap -->
   <div id="footerwrap">
