Final style tweaks
- additions to index.scss
- class names to index.html
- editing out edit button from currentplaylist to return later and
restore
- changing color of track edits in ui.js

--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
     </div>
   <br>
     <div class="row">
+      <div class="text">
     <div class="smallest-spacer col-xs-2"></div>
-      <p>"Phono" n. Sound. Vibrations that travel through the air or another medium and can be heard when they reach a person's or animal's ear.</p>
+      <p><strong>"Phono" n. Sound. Vibrations that travel through the air or another medium and can be heard when they reach a person's or animal's ear.</p>
       <div class="smallest-spacer col-xs-2"></div>
       <br>
       <div class="small-spacer col-xs-2"></div>
-      <p>"Phonia" adj. denoting a type of plug, and the corresponding socket, used with audio and video equipment.</p>
+      <p>"Phonia" adj. denoting a type of plug, and the corresponding socket, used with audio and video equipment.</strong></p>
       <div class="small-spacer col-xs-2"></div>
+    </div>
   </div>
 <div class="message-block container">
   <!-- <div class="small-spacer col-xs-2"></div> -->
