--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   </button>
   <div class="hidden sign-out">
   <form id="sign-out">
-    <fieldset>
-      <input type="submit" name="submit" value="Sign Out">
-    </fieldset>
+    <!-- <fieldset> -->
+      <button type="submit" name="submit">Sign Out</button>
+    <!-- </fieldset> -->
   </form>
   </div>
 </div>
